--- a/base/_opacity.scss
+++ b/base/_opacity.scss
@@ -1,11 +1,11 @@
 $opacity-types: (
-        todo: var(--todo, 0.1),
+  todo: var(--todo, 0.1),
 ) !default;
 
 @function opacity($key: base) {
-  $opacity: map-get($opacity-types, $key);
-  @if($opacity) {
-    @return $opacity
+  $value: map-get($opacity-types, $key);
+  @if ($value) {
+    @return var(--$key, $value);
   } @else {
     $error: 'Given type is `#{$key}` please use `#{map-keys($opacity-types)}`';
     @error $error;
