--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,6 @@
-@use 'base/opacity';
-@use 'base/size';
-@use 'base/space';
-@use 'base/typography';
-@use 'base/border-radius';
-@use 'base/colors';
+@import './base/opacity';
+@import './base/size';
+@import './base/space';
+@import './base/typography';
+@import './base/border-radius';
+@import './base/colors';
