--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,3 @@
-@import 'base/opacity';
-@import 'base/size';
-@import 'base/space';
-@import 'base/typography';
-@import 'base/border-radius';
-@import 'base/colors';
+@import 'utils';
+@import 'base';
+@import 'layout';
