--- a/base/_opacity.scss
+++ b/base/_opacity.scss
@@ -6,6 +6,6 @@ $opacity-types: (
   ghost: 0.05,
 ) !default;
 
-@function fill($key) {
+@function av-opacity($key) {
   @return var(--$key, get-number($opacity-types, $key));
 }
