--- a/base/index.scss
+++ b/base/index.scss
@@ -1,6 +1,2 @@
-@import 'opacity';
-@import 'size';
-@import 'space';
-@import 'typography';
-@import 'border-radius';
-@import 'colors';
+@import 'normalize';
+@import 'reset';
