--- a/utils/functions/_maps.scss
+++ b/utils/functions/_maps.scss
@@ -9,6 +9,6 @@
       @error 'Please make sure the key `#{$key}` value is a number current value is `#{$value}`';
     }
   } @else {
-    @error 'Given value is `#{$key}`, the aviablle values are - `#{map-keys($map)}`';
+    @error 'Given value is `#{$key}`, the available values are - `#{map-keys($map)}`';
   }
 }
