--- a/abstracts/_border-radius.scss
+++ b/abstracts/_border-radius.scss
@@ -16,4 +16,9 @@ $border-radius-types: (
   @return var(set-as-var($key), get-number($border-radius-types, $key) + $border-radius-measure-unit);
 }
 
-
+// Set :export to share variables with JS
+:export {
+  @each $key, $value in $border-radius-types {
+    #{$key}: $value + $border-radius-measure-unit;
+  }
+}
