--- a/abstracts/_size.scss
+++ b/abstracts/_size.scss
@@ -25,3 +25,10 @@ $sizes-types: (
 @function av-size($key) {
   @return var(set-as-var($key), get-number($sizes-types, $key) + $sizes-measure-unit);
 }
+
+// Set :export to share variables with JS
+:export {
+  @each $key, $value in $sizes-types {
+    #{$key}: $value + $sizes-measure-unit;
+  }
+}
