Fixed colors and add more information in the readme file

--- a/abstracts/index.scss
+++ b/abstracts/index.scss
@@ -1,6 +1,6 @@
 @import 'opacity';
-@import 'size';
-@import 'space';
+@import 'sizes';
+@import 'spaces';
 @import 'typography';
 @import 'border-radius';
 @import 'colors';
