Fixed content color

--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -9,7 +9,7 @@ $color-palate: (
   trueblack: #010a14,
   // Content Colors
   surface: #02244d,
-  content: #021d3d,
+  content: #fcfcff,
   // Status Colors
   success: #00d0a0,
   alert: #ffc400,
