--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -8,8 +8,8 @@ $color-palate: (
   purewhite: #ffffff,
   trueblack: #010a14,
   // Content Colors
-  surface: #02244d,
-  content: #fcfcff,
+  surface: #fcfcff,
+  content: #02244d,
   // Status Colors
   success: #00d0a0,
   alert: #ffc400,
