--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -9,7 +9,8 @@ $color-palate: (
   trueblack: #010a14,
   // Content Colors
   surface: #fcfcff,
-  content: #02244d,
+  content-a: #02244d,
+  content-b: #fcfcfc,
   // Status Colors
   success: #00d0a0,
   alert: #ffc400,
