--- a/utils/functions/_colors.scss
+++ b/utils/functions/_colors.scss
@@ -1,3 +1,3 @@
-@function hexToRGBString($hexColor) {
+@function hex-to-rgb-string($hexColor) {
   @return "#{red($hexColor)},#{green($hexColor)},#{blue($hexColor)}";
 }
