--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,3 @@
-@import 'utils';
-@import 'abstracts';
-@import 'layout';
+@import './utils/index';
+@import './abstracts/index';
+@import './layout/index';
