Import-path-correction

--- a/abstracts/index.scss
+++ b/abstracts/index.scss
@@ -1,7 +1,7 @@
-@import 'opacity';
-@import 'sizes';
-@import 'spaces';
-@import 'typography';
-@import 'border-radius';
-@import 'colors';
-@import 'shadows';
+@import './opacity';
+@import './sizes';
+@import './spaces';
+@import './typography';
+@import './border-radius';
+@import './colors';
+@import './shadows';
