--- a/layout/index.scss
+++ b/layout/index.scss
@@ -1,4 +1,4 @@
-@import 'elevations';
-@import 'heading';
-@import 'body';
-@import 'scrollbar';
+@import './elevations';
+@import './heading';
+@import './body';
+@import './scrollbar';
