--- a/extensions/index.scss
+++ b/extensions/index.scss
@@ -1,3 +1,3 @@
-@import "reset";
-@import "normalize";
-@import "av-normalize";
+@import './reset';
+@import './normalize';
+@import './av-normalize';
