--- a/utils/functions/index.scss
+++ b/utils/functions/index.scss
@@ -1,4 +1,4 @@
-@import 'helpers';
-@import 'measures';
-@import 'maps';
-@import 'colors';
+@import './helpers';
+@import './measures';
+@import './maps';
+@import './colors';
