added overlay color

--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -10,6 +10,8 @@ $color-palate: (
   // Content Colors
   surface: #fcfcff,
   content: #02244d,
+  // Overlay Colors
+  overlay: #ffffff,
   // Status Colors
   success: #00d0a0,
   alert: #ffc400,
