--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -8,8 +8,8 @@ $color-palate: (
   purewhite: #ffffff,
   trueblack: #010a14,
   // Content Colors
-  surface: #fcfcff,
-  content: #02244d,
+  surface: #ffffff,
+  content: #021d3d,
   // Overlay Colors
   overlay: #ffffff,
   // Status Colors
