--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -4,6 +4,8 @@ $color-palate: (
   secondary: #02234b,
   accent: #19e7fc,
   decorative: #f43aac,
+  blue-light: #0d315a,
+  blue-float: #204167,
   // Native Colors
   purewhite: #ffffff,
   trueblack: #010a14,
