--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -35,7 +35,7 @@ $color-palate: (
   ac-agena: #6c5ce7,
   ac-spica: #fd79a8,
   ac-mimosa: #e84393,
-  floating-blue: #204167
+  ac-floating-blue: #204167
 ) !default;
 
 // This function will manage to return a color by given key.
