remove ac-floating-blue

--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -34,8 +34,7 @@ $color-palate: (
   ac-rigel: #a29bfe,
   ac-agena: #6c5ce7,
   ac-spica: #fd79a8,
-  ac-mimosa: #e84393,
-  ac-floating-blue: #204167
+  ac-mimosa: #e84393
 ) !default;
 
 // This function will manage to return a color by given key.
