APP-14946: Add dark success color (#47)
* add dark success color

* remove space

* change to lower casse

--- a/abstracts/_colors.scss
+++ b/abstracts/_colors.scss
@@ -16,6 +16,7 @@ $color-palate: (
   overlay: #ffffff,
   // Status Colors
   success: #00d0a0,
+  success-dark: #13723d,
   alert: #ffc400,
   error: #d50000,
   // Additional Colors
